# gnomon

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: JOURNAL.md  PRD.md
docs/decisions/: 0001-naming.md
gnomon/: __init__.py  types.py
gnomon/agents/: __init__.py  base.py
gnomon/eval/: __init__.py  runner.py
gnomon/stats/: __init__.py  bootstrap.py
gnomon/storage/: __init__.py  db.py  schema.py
tests/: test_runner.py  test_smoke.py  test_stats_bootstrap.py  test_storage.py
