[project]
name = "gnomon-eval"
version = "0.0.1"
description = "Gnomon — statistical decision layer for LLM agent evaluation. Install: pip install gnomon-eval; import gnomon."
authors = [{ name = "Ashwath" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["llm", "evaluation", "agents", "statistics", "ai-safety"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gnomon"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.11"
strict = true
